src/pages/Home/Home.css
/* Home Section */
.home {
  width: 100vw;
}

/* Hero Section */
.hero__section {
  width: 100vw;
  min-height: 100vh;
  height: fit-content;
  background: #093931FF;
  background-image: url("../../assets/bg1.svg");
  background-repeat: no-repeat;
  background-size: cover;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 6vw;
  padding: 0 9.6vw 0 8.6vw;
  overflow-x: hidden;
}

/* Left Section of Hero Section */
.hero__section__left {
  width: 35vw;
  /* height: 246px; */
  height: fit-content;
  margin: 82px 0 20px 0;
  /* border: 2px solid white; */
  font-size: 72px;
  line-height: 94px;
  color: #F5D38EFF;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

/* Button */
.button {
  min-width: 200px;
  min-height: 52px;
  width: 200px;
  height: 52px;
  padding: 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: Manrope;
  font-size: 18px;
  line-height: 28px;
  color: #FFFFFFFF;
  background: #00000000;
  opacity: 1;
  border-radius: 26px;
  border-width: 1px;
  border-color: #FFFFFFFF;
  border-style: solid;
}

/* Hover Styles for Button */
.button:hover {
  color: rgb(186, 187, 189);
  border-color: rgb(186, 187, 189);
  background: #00000022;
}

/* Right Section of Hero Section */
.hero__section__right {
  width: 30vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Image1 */
.image1 {
  position: relative;
  z-index: 1;
  margin-top: 50px;
  width: 407px;
  height: 543px;
  border-radius: 8px;
}

/* Image2 */
.image2 {
  width: 241px;
  height: 321px;
  border-radius: 121px 121px 0px 0px;
  box-shadow: 0px 8px 17px #171a1f, 0px 0px 2px #171a1f;
}

/* Video in Hero Section */
.hero__section__video {
  margin-top: 50px;
  position: relative;
  left: -100px;
  z-index: 2;
}

/* Play Button */
.playbutton {
  position: absolute;
  height: 60px;
  top: calc(48% - 16px);
  left: calc(44% - 16px);
}

/* Features Section */
.features__section {
  display: flex;
  justify-content: space-between;
  padding: 36px 8.6vw;
  margin: 24px 0;
  gap: 30px 0;
  flex-wrap: wrap;
}

/* Featured Products Section and Portfolio Section */
.featured_products__section,
.portfolio__section {
  padding: 0 0 0 8.6vw;
  width: 100vw;
  /* height: 506px; */
  height: fit-content;
  box-sizing: border-box;
  display: flex;
  gap: 48px;
}

/* Left Section of Product Section */
.product__section__left {
  margin-top: 54px;
  width: 264px;
  box-sizing: border-box;
}

/* Description in Product Section */
.product__section__description {
  margin-top: 12px;
  width: 264px;
  font-family: Manrope;
  font-size: 16px;
  line-height: 26px;
  color: #9095A0FF;
  margin-bottom: 24px;
}

/* Heading of Featured Product Section */
.featured_product_heading {
  width: 264px;
  font-size: 40px;
  line-height: 56px;
  color: #0D554AFF;
}

/* Products in Product Section */
.product_section__products {
  display: flex;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  overflow-x: hidden;
  margin-top: 38px;
  margin-left: -10px;
}

/* Our Collections Section */
.our-collections__section {
  padding: 48px 8.6vw;
  /* min-height: 1090px; */
  height: fit-content;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-sizing: border-box;
}

/* Heading in Home Section */
.home .heading {
  font-size: 40px;
  line-height: 56px;
  color: #0D554AFF;
  display: flex;
  justify-content: center;
}

/* Collection Items */
.collection__items {
  width: 100%;
  margin-top: 46px;
  margin-bottom: 26px;
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto auto;
  grid-row-gap: 20px;
  justify-content: space-between;
  align-content: space-between;
}

/* Additional Styling for Collection Items */
.collection__items > *:nth-child(3n) {
  margin-top: 36px;
}

.collection__items > *:nth-child(3n+1) {
  margin-top: 36px;
}

/* Portfolio Section */
.portfolio__section {
  margin-top: 24px;
  /* height: 554px; */
  background: #FAFAFBFF;
}

/* Our Story Section */
.our-story__section {
  height: 564px;
  padding: 48px 8.6vw 72px 8.6vw;
  background: #FAFAFBFF;
  box-sizing: border-box;
}

/* Video in Our Story Section */
.our-story__video {
  margin-top: 20px;
  height: 368px;
  width: 100%;
}

/* Testimonials Section */
.testimonials__section {
  height: 522px;
  background: #093931FF;
  display: flex;
  padding: 72px 8.6vw 75px;
  justify-content: space-between;
  color: white;
  align-items: center;
  box-sizing: border-box;
}

/* Title in Testimonials Section */
.testimonials__section .section__title {
  font-size: 48px;
  line-height: 68px;
}

/* Description in Testimonials Section */
.testimonials__section .section__description {
  width: 264px;
  font-size: 16px;
  line-height: 26px;
}

/* Right Section of Testimonial */
.testimonial_right {
  width: 696px;
  height: 375px;
  display: flex;
  gap: 40px;
  justify-content: space-between;
}

/* Slider */
.slider {
  width: 100%;
  height: fit-content;
}

/* Testimonial */
.testimonial {
  background: #171A1F4D;
  overflow: hidden;
  border-radius: 8px;
  box-sizing: border-box;
  width: fit-content;
  max-width: 696px;
  height: 375px;
  display: flex;
  margin: 0 auto;
}

/* Content in Testimonial */
.testimonial_content {
  margin: 60px 36px;
  width: 324px;
  display: flex;
  flex-direction: column;
  font-size: 16px;
  line-height: 26px;
  position: relative;
}

/* User Name in Testimonial */
.user_name {
  margin-top: 18px;
  line-height: 30px;
}

/* Next Arrow in Testimonial */
.next_arrow2{
  position: absolute;
  left: calc(100% - 52px - 36px);
  top: calc(100% - 26px);
  z-index: 1;
}

/* Previous Arrow in Testimonial */
.prev_arrow2{
  position: absolute;
  left: calc(100% - 52px - 18px - 52px - 36px);
  top: calc(100% - 26px);
  z-index: 1;
}

.testimonial_right{
width: 100vw;
box-sizing: border-box;
}




/* Responsive Styles */
@media screen and (max-width: 1350px) {
  .collection__items {
    grid-template-columns: repeat(2, auto);
    justify-content: space-evenly;
    grid-row-gap: 50px;
  }
  .collection__items > *:nth-child(3n) {
    margin-top: 0px;
  }
  
  .collection__items > *:nth-child(3n+1) {
    margin-top: 0px;
  }
}

@media screen and (max-width: 999px) {
  .collection__items {
    grid-template-columns: repeat(1, auto);
    justify-content: center;
  }
  .hero__section {
    flex-direction: column-reverse;
    padding-top: 80px;
    justify-content: center;
    align-items: center;
    width: 100%;
  }
  .hero__section__left{
    margin: 0px  0 100px 0;
    padding: 0;
    width: 100%;
  }
  .hero__section__right{
    width: 100%;
    justify-content: center;
    padding: auto;
    /* margin-left: 100px; */
    /* padding-left: 8.6vw; */
    margin-right: -100px;
  }
  .testimonials__section {
    flex-direction: column;
    gap: 50px;
    height: fit-content;
  }
  .testimonials__section .section__description{
    width: 100%;
  }
}

@media screen and (max-width: 700px) {
  .features__section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .featured_products__section,
  .portfolio__section{
    padding: 0 8.0vw;
    min-height: fit-content;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
  .product_section__products{
    overflow: visible;
  }
  .product__section__left{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 80vw;
  }
  .product__section__left > div{
    width: fit-content;
  }
  .image1{
    width: 50vw;
    height: auto;
  }
  .image2{
    width: 40vw;
    height: 52vw;
  }
  .testimonial img{
    width: 40vw;
    height: auto;
  }
  .testimonial{
    flex-direction: column;
    height: fit-content;
    justify-content: center;
    align-items: center;
    padding: 40px 0 0 0;
    max-width: 90vw;
    box-sizing: border-box;
  }
  .testimonials__section{
    min-height: fit-content;
    overflow: hidden;
  }
  .testimonial_right{
    height: fit-content;

  }
  
  .next_arrow2{
    left: 0;
    padding-right: 5vw;
    display: flex;
    justify-content: end;
    top: calc(35% - 26px);
    width: 100vw;
    box-sizing: border-box;
  }
  
  .prev_arrow2{
    top: calc(35% - 26px);
    width: 100%;
    padding-left: calc(5vw - 5px);
    left: 0;
  }
  
  .testimonial_content {
    margin: 50px auto;
    padding: 0 10px;
    box-sizing: border-box;
  }
}

